Another attempt at fixing GIF not autoplaying on Mobile Safari

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -374,6 +374,7 @@
 }
 .status .media-gif video {
   object-fit: cover;
+  pointer-events: none;
 }
 .status .media-audio {
   border: 0;
